# simplekv

./: CMakeLists.txt  README.md  simplekv.cpp  simplekv.h  value_convert.cpp
cmake/: basic.cmake
example/: CMakeLists.txt  basic_usage.cpp
platform/esp/: simplekv_esp.cpp  simplekv_esp.h
